--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -74,6 +74,7 @@ body{
     text-transform: uppercase;
     font-weight: 300;
     margin-bottom: 10px;
+    cursor: pointer;
 
     &::placeholder{
         color: $text-secondary;
@@ -105,9 +106,31 @@ body{
     &__body{
         position: absolute;
         width: 100%;
+        bottom: 100%;
+        max-height: 250px;
         left: 0;
         background-color: $bg-secondary;
         display: none;
+        overflow: auto;
+
+        &::-webkit-scrollbar{
+            width: 5px;
+        }
+
+        &::-webkit-scrollbar-track{
+            background-color: lighten($bg-secondary, 5);
+        }
+
+        &::-webkit-scrollbar-thumb{
+            background-color: $text-secondary;
+        }
+        
+    }
+
+    &--opened{
+        .select__body{
+            display: block;
+        }
     }
 }
 
