--- a/src/style/main.css
+++ b/src/style/main.css
@@ -465,7 +465,8 @@ body {
   outline: none;
   text-transform: uppercase;
   font-weight: 300;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  cursor: pointer; }
   .input::-webkit-input-placeholder {
     color: #CED3C9; }
   .input:-ms-input-placeholder {
@@ -499,9 +500,20 @@ body {
   .select__body {
     position: absolute;
     width: 100%;
+    bottom: 100%;
+    max-height: 250px;
     left: 0;
     background-color: #47A8BD;
-    display: none; }
+    display: none;
+    overflow: auto; }
+    .select__body::-webkit-scrollbar {
+      width: 5px; }
+    .select__body::-webkit-scrollbar-track {
+      background-color: #5ab1c4; }
+    .select__body::-webkit-scrollbar-thumb {
+      background-color: #CED3C9; }
+  .select--opened .select__body {
+    display: block; }
 
 .select-item {
   width: 100%;
