cryptocurrencies list created

--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -151,6 +151,11 @@ body{
     &__radio{
         display: none;
     }
+
+    &__symbol{
+        margin-left: 10px;
+        opacity: 0.5;
+    }
 }
 
 
