--- a/src/style/main.css
+++ b/src/style/main.css
@@ -509,7 +509,7 @@ body {
     .select__body::-webkit-scrollbar {
       width: 5px; }
     .select__body::-webkit-scrollbar-track {
-      background-color: #5ab1c4; }
+      background-color: #6dbaca; }
     .select__body::-webkit-scrollbar-thumb {
       background-color: #CED3C9; }
   .select--opened .select__body {
